src/interfaces/ecpg/test/sql/sqljson.pgc
#include <stdio.h>

EXEC SQL INCLUDE sqlca;
exec sql include ../regression;

EXEC SQL WHENEVER SQLERROR sqlprint;

int
main ()
{
EXEC SQL BEGIN DECLARE SECTION;
  char json[1024];
EXEC SQL END DECLARE SECTION;

  ECPGdebug (1, stderr);

  EXEC SQL CONNECT TO REGRESSDB1;
  EXEC SQL SET AUTOCOMMIT = ON;

  EXEC SQL SELECT JSON_OBJECT(RETURNING text) INTO :json;
  printf("Found json=%s\n", json);

  EXEC SQL SELECT JSON_OBJECT(RETURNING text FORMAT JSON) INTO :json;
  printf("Found json=%s\n", json);

  EXEC SQL SELECT JSON_ARRAY(RETURNING jsonb) INTO :json;
  printf("Found json=%s\n", json);

  EXEC SQL SELECT JSON_ARRAY(RETURNING jsonb FORMAT JSON) INTO :json;
  printf("Found json=%s\n", json);

  EXEC SQL SELECT JSON_OBJECT(1: 1, '1': NULL WITH UNIQUE) INTO :json;
  // error

  EXEC SQL SELECT JSON_OBJECT(1: 1, '2': NULL, 1: '2' ABSENT ON NULL WITHOUT UNIQUE KEYS) INTO :json;
  printf("Found json=%s\n", json);

  EXEC SQL SELECT JSON_OBJECT(1: 1, '2': NULL ABSENT ON NULL WITHOUT UNIQUE RETURNING jsonb) INTO :json;
  printf("Found json=%s\n", json);

  EXEC SQL DISCONNECT;

  return 0;
}
